@@ -26,15 +26,16 @@ public class ParaffinProcessingServiceImp implements ParaffinProcessingService {
     private final OperationTypeRepo opTypeRepo;
     private final MediumRepo mediumRepo;
     private final TissueRepo tissueRepo;
+    private final SlotRepo slotRepo;
+    private final SampleRepo sampleRepo;
     private final WorkService workService;
     private final OperationService opService;
     private final CommentValidationService commentValidationService;
     private final LabwareValidatorFactory lwValFactory;
-    private final SlotRepo slotRepo;
 
     @Autowired
     public ParaffinProcessingServiceImp(LabwareRepo lwRepo, OperationCommentRepo opComRepo, OperationTypeRepo opTypeRepo,
-                                        MediumRepo mediumRepo, TissueRepo tissueRepo, SlotRepo slotRepo,
+                                        MediumRepo mediumRepo, TissueRepo tissueRepo, SlotRepo slotRepo, SampleRepo sampleRepo,
                                         WorkService workService, OperationService opService,
                                         CommentValidationService commentValidationService,
                                         LabwareValidatorFactory lwValFactory) {
@@ -44,6 +45,7 @@ public class ParaffinProcessingServiceImp implements ParaffinProcessingService {
         this.mediumRepo = mediumRepo;
         this.tissueRepo = tissueRepo;
         this.slotRepo = slotRepo;
+        this.sampleRepo = sampleRepo;
         this.workService = workService;
         this.opService = opService;
         this.commentValidationService = commentValidationService;
@@ -150,8 +152,8 @@ public class ParaffinProcessingServiceImp implements ParaffinProcessingService {
      */
     public OperationResult record(User user, Collection<Labware> labware, Work work, Comment comment, Medium medium) {
         updateMedium(labware, medium);
-        List<Operation> ops = createOps(user, labware);
-        createBlocks(labware);
+        List<BlockChange> changes = createBlocks(labware);
+        List<Operation> ops = createOps(user, changes);
         workService.link(work, ops);
         recordComments(comment, ops);
         return new OperationResult(ops, labware);
@@ -180,32 +182,80 @@ public class ParaffinProcessingServiceImp implements ParaffinProcessingService {
      * Converts labware to blocks, if they aren't already
      * @param labware the labware to make into blocks, if they aren't already
      */
-    public void createBlocks(Collection<Labware> labware) {
+    List<BlockChange> createBlocks(Collection<Labware> labware) {
+        List<Sample> samplesToSave = new ArrayList<>();
         List<Slot> slotsToSave = new ArrayList<>();
+        List<BlockChange> changes = new ArrayList<>(labware.size());
         for (Labware lw : labware) {
-            Slot slot = lw.getFirstSlot();
-            if (!slot.isBlock()) {
-                slot.setBlockSampleId(slot.getSamples().getFirst().getId());
-                slot.setBlockHighestSection(0);
-                slotsToSave.add(slot);
+            Map<Sample, Sample> newSampleMap = new HashMap<>();
+            for (Slot slot : lw.getSlots()) {
+                if (slot.getSamples().isEmpty()) {
+                    continue;
+                }
+                boolean changed = false;
+                List<Sample> newSamples = new ArrayList<>(slot.getSamples().size());
+                for (Sample sam : slot.getSamples()) {
+                    Sample blockSample;
+                    if (!sam.isBlock()) {
+                        blockSample = newSampleMap.get(sam);
+                        if (blockSample==null) {
+                            blockSample = Sample.newBlock(null, sam.getTissue(), sam.getBioState(), 0);
+                            newSampleMap.put(sam, blockSample);
+                        }
+                        changed = true;
+                    } else {
+                        blockSample = sam;
+                    }
+                    newSamples.add(blockSample);
+                    changes.add(new BlockChange(slot, sam, blockSample));
+                }
+                if (changed) {
+                    slot.setSamples(newSamples);
+                    slotsToSave.add(slot);
+                }
             }
+            samplesToSave.addAll(newSampleMap.values());
+        }
+        if (!samplesToSave.isEmpty()) {
+            // This should update the sample objects with ids
+            sampleRepo.saveAll(samplesToSave);
         }
         if (!slotsToSave.isEmpty()) {
             slotRepo.saveAll(slotsToSave);
         }
+        return changes;
     }
 
     /**
-     * Creates operations on the given labware
+     * Creates operations
      * @param user user responsible
-     * @param labware the labware
+     * @param changes the slots and affected samples
      * @return the operations created
      */
-    public List<Operation> createOps(User user, Collection<Labware> labware) {
+    List<Operation> createOps(User user, Collection<BlockChange> changes) {
         OperationType opType = opTypeRepo.getByName("Paraffin processing");
-        return labware.stream()
-                .map(lw -> opService.createOperationInPlace(opType, user, lw, null, null))
-                .collect(toList());
+        Map<Integer, List<BlockChange>> lwChanges = new LinkedHashMap<>();
+        for (BlockChange change : changes) {
+            Integer lwId = change.slot.getLabwareId();
+            lwChanges.computeIfAbsent(lwId, id -> new ArrayList<>()).add(change);
+        }
+        return lwChanges.values().stream()
+                .map(cs -> createOp(user, opType, cs))
+                .toList();
+    }
+
+    /**
+     * Creates an operation describing the given changes
+     * @param user the user responsible
+     * @param opType the operation type
+     * @param changes slots and samples
+     * @return the created operation
+     */
+    Operation createOp(User user, OperationType opType, Collection<BlockChange> changes) {
+        List<Action> actions = changes.stream()
+                .map(c -> new Action(null, null, c.slot, c.slot, c.blockSample, c.originalSample))
+                .toList();
+        return opService.createOperation(opType, user, actions, null);
     }
 
     /**
@@ -220,4 +270,7 @@ public class ParaffinProcessingServiceImp implements ParaffinProcessingService {
                 .collect(toList());
         opComRepo.saveAll(opComs);
     }
+
+    /** A slot and the samples involved in its action */
+    record BlockChange(Slot slot, Sample originalSample, Sample blockSample) {}
 }
